Thumbnails for image preview

--- a/internal/server/sessionlist.html
+++ b/internal/server/sessionlist.html
@@ -129,7 +129,7 @@
             <div class="card">
                 <div class="card-title">Foto #{{ add $index 1 }}</div>
                 <img class="card-image" alt=""
-                     src="./{{ $path }}"/>
+                     src="./{{ $path }}?thumbnail=true"/>
                 <div class="card-actions">
                     <a class="button" href="./{{ $path }}" download="{{ $path }}">Download</a>
                 </div>
